# AdventOfCode2020

./: LICENSE.txt  README.md
day01_report_repair_common/: Cargo.toml
day01_report_repair_common/src/: lib.rs
day01_report_repair_part1/: Cargo.toml
day01_report_repair_part1/src/: main.rs
day01_report_repair_part2/: Cargo.toml
day01_report_repair_part2/src/: main.rs
day02_password_philosophy_common/: Cargo.toml
day02_password_philosophy_common/src/: lib.rs
day02_password_philosophy_part1/: Cargo.toml
day02_password_philosophy_part1/src/: main.rs
day02_password_philosophy_part2/: Cargo.toml
day02_password_philosophy_part2/src/: main.rs
day03_toboggan_trajectory_common/: Cargo.toml
day03_toboggan_trajectory_common/src/: lib.rs
day03_toboggan_trajectory_part1/: Cargo.toml
day03_toboggan_trajectory_part1/src/: main.rs
day03_toboggan_trajectory_part2/: Cargo.toml
day03_toboggan_trajectory_part2/src/: main.rs
day04_passport_processing_common/: Cargo.toml
day04_passport_processing_common/src/: lib.rs
day04_passport_processing_part1/: Cargo.toml
day04_passport_processing_part1/src/: main.rs
day04_passport_processing_part2/: Cargo.toml
day04_passport_processing_part2/src/: main.rs
day05_binary_boarding_common/: Cargo.toml
day05_binary_boarding_common/src/: lib.rs
day05_binary_boarding_part1/: Cargo.toml
day05_binary_boarding_part1/src/: main.rs
day05_binary_boarding_part2/: Cargo.toml
day05_binary_boarding_part2/src/: main.rs
day06_custom_customs_common/: Cargo.toml
day06_custom_customs_common/src/: lib.rs
day06_custom_customs_part1/: Cargo.toml
day06_custom_customs_part1/src/: main.rs
day06_custom_customs_part2/: Cargo.toml
day06_custom_customs_part2/src/: main.rs
day07_handy_haversacks_common/: Cargo.toml
day07_handy_haversacks_common/src/: lib.rs
day07_handy_haversacks_part1/: Cargo.toml
day07_handy_haversacks_part1/src/: main.rs
day07_handy_haversacks_part2/: Cargo.toml
day07_handy_haversacks_part2/src/: main.rs
day08_handheld_halting_common/: Cargo.toml
day08_handheld_halting_common/src/: lib.rs
day08_handheld_halting_part1/: Cargo.toml
day08_handheld_halting_part1/src/: main.rs
day08_handheld_halting_part2/: Cargo.toml
day08_handheld_halting_part2/src/: main.rs
day09_encoding_error_common/: Cargo.toml
day09_encoding_error_common/src/: lib.rs
day09_encoding_error_part1/: Cargo.toml
day09_encoding_error_part1/src/: main.rs
day09_encoding_error_part2/: Cargo.toml
day09_encoding_error_part2/src/: main.rs
day10_adapter_array_common/: Cargo.toml
day10_adapter_array_common/src/: lib.rs
day10_adapter_array_part1/: Cargo.toml
day10_adapter_array_part1/src/: main.rs
day10_adapter_array_part2/: Cargo.toml
day10_adapter_array_part2/src/: main.rs
day11_seating_system_common/: Cargo.toml
day11_seating_system_common/src/: lib.rs
day11_seating_system_part1/: Cargo.toml
day11_seating_system_part1/src/: main.rs
day11_seating_system_part2/: Cargo.toml
day11_seating_system_part2/src/: main.rs
day12_rain_risk_common/: Cargo.toml
day12_rain_risk_common/src/: lib.rs
day12_rain_risk_part1/: Cargo.toml
day12_rain_risk_part1/src/: main.rs
day12_rain_risk_part2/: Cargo.toml
day12_rain_risk_part2/src/: main.rs
day13_shuttle_safety_common/: Cargo.toml
day13_shuttle_safety_common/src/: lib.rs
day13_shuttle_safety_part1/: Cargo.toml
day13_shuttle_safety_part1/src/: main.rs
day13_shuttle_safety_part2/: Cargo.toml
day13_shuttle_safety_part2/src/: main.rs
day14_docking_data_common/: Cargo.toml
day14_docking_data_common/src/: lib.rs
day14_docking_data_part1/: Cargo.toml
day14_docking_data_part1/src/: main.rs
day14_docking_data_part2/: Cargo.toml
day14_docking_data_part2/src/: main.rs
day15_rambunctious_recitation_common/: Cargo.toml
day15_rambunctious_recitation_common/src/: lib.rs
day15_rambunctious_recitation_part1/: Cargo.toml
day15_rambunctious_recitation_part1/src/: main.rs
day15_rambunctious_recitation_part2/: Cargo.toml
day15_rambunctious_recitation_part2/src/: main.rs
day16_ticket_translation_common/: Cargo.toml
day16_ticket_translation_common/src/: lib.rs
day16_ticket_translation_part1/: Cargo.toml
day16_ticket_translation_part1/src/: main.rs
day16_ticket_translation_part2/: Cargo.toml
day16_ticket_translation_part2/src/: main.rs
day17_conway_cubes_common/: Cargo.toml
day17_conway_cubes_common/src/: lib.rs
day17_conway_cubes_part1/: Cargo.toml
day17_conway_cubes_part1/src/: main.rs
day17_conway_cubes_part2/: Cargo.toml
day17_conway_cubes_part2/src/: main.rs
day18_operation_order_common/: Cargo.toml
day18_operation_order_common/src/: lib.rs
day18_operation_order_part1/: Cargo.toml
day18_operation_order_part1/src/: main.rs
day18_operation_order_part2/: Cargo.toml
day18_operation_order_part2/src/: main.rs
day19_monster_messages_common/: Cargo.toml
day19_monster_messages_common/src/: lib.rs
day19_monster_messages_part1/: Cargo.toml
day19_monster_messages_part1/src/: main.rs
day19_monster_messages_part2/: Cargo.toml
day19_monster_messages_part2/src/: main.rs
