[package]
name = "day04_passport_processing_part1"
version = "0.1.0"
authors = ["Kevin Barnes <kbarnes3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day04_passport_processing_common = { path = "../day04_passport_processing_common" }
