[package]
name = "day08_handheld_halting_part2"
version = "0.1.0"
authors = ["Kevin Barnes <kbarnes3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day08_handheld_halting_common = { path = "../day08_handheld_halting_common" }
