[package]
name = "day09_encoding_error_part2"
version = "0.1.0"
authors = ["Kevin Barnes <kbarnes3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day09_encoding_error_common = { path = "../day09_encoding_error_common" }
