[package]
name = "day10_adapter_array_part1"
version = "0.1.0"
authors = ["Kevin Barnes <kbarnes3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day10_adapter_array_common = { path = "../day10_adapter_array_common" }
