[package]
name = "day15_rambunctious_recitation_part2"
version = "0.1.0"
authors = ["Kevin Barnes <kbarnes3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day15_rambunctious_recitation_common = { path = "../day15_rambunctious_recitation_common" }
