[package]
name = "day17_conway_cubes_part2"
version = "0.1.0"
authors = ["Kevin Barnes <kbarnes3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day17_conway_cubes_common = { path = "../day17_conway_cubes_common" }
