[package]
name = "day18_operation_order_part1"
version = "0.1.0"
authors = ["Kevin Barnes <kbarnes3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day18_operation_order_common = { path = "../day18_operation_order_common" }
rayon = "1.5"
