[package]
name = "day19_monster_messages_part2"
version = "0.1.0"
authors = ["Kevin Barnes <kbarnes3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day19_monster_messages_common = { path = "../day19_monster_messages_common" }
rayon = "1.5"
